syntax ="proto3";

package sports;

option go_package = "/sports";

import "google/protobuf/timestamp.proto";

// 
service Sports {
    // Returns a list of events
    rpc ListEvents(ListEventsRequest) returns (ListEventsResponse) {}
}

/* 
 * Request object for ListEvents
 */

 message ListEventsRequest {
    ListEventsRequestFilter filter = 1;
    OrderBy order =2;
 }
 // Orderby Object for ListEvents (optional)
 message OrderBy {
    string field = 1;
    string direction =2;
 }

// Response object for ListEvents
message ListEventsResponse {
    repeated Event events = 1;
}

// Filter for ListEvents
message ListEventsRequestFilter {
    repeated int64 id = 1;
    optional string category = 2;
    optional string mascot = 3;
}

/* Resources */

message Event {
    // Unique identifier for the event
    int64 id = 1;
    // Category of the event
    string category = 2;
    // Mascot of the event
    string mascot = 3;
    // Start time of the event
    google.protobuf.Timestamp start_time = 4;
}

